cilium-demos/microservices-east-west/workloads.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacman-web
  labels:
    app.kubernetes.io/name: pacman
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: pacman-cilium-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: pacman
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pacman
        app.kubernetes.io/component: web
        app.kubernetes.io/part-of: pacman-cilium-demo
    spec:
      serviceAccountName: pacman-demo
      containers:
        - name: pacman
          image: docker.io/saintdle/pacman@sha256:4de4f422b5edb49b606055525c5dc29c3824446f401f6ece241d7ae6302d1fca
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacman-score
  labels:
    app.kubernetes.io/name: pacman
    app.kubernetes.io/component: score
    app.kubernetes.io/part-of: pacman-cilium-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: pacman
      app.kubernetes.io/component: score
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pacman
        app.kubernetes.io/component: score
        app.kubernetes.io/part-of: pacman-cilium-demo
    spec:
      containers:
        - name: pacman
          image: docker.io/saintdle/pacman@sha256:4de4f422b5edb49b606055525c5dc29c3824446f401f6ece241d7ae6302d1fca
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacman-user
  labels:
    app.kubernetes.io/name: pacman
    app.kubernetes.io/component: user
    app.kubernetes.io/part-of: pacman-cilium-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: pacman
      app.kubernetes.io/component: user
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pacman
        app.kubernetes.io/component: user
        app.kubernetes.io/part-of: pacman-cilium-demo
    spec:
      containers:
        - name: pacman
          image: docker.io/saintdle/pacman@sha256:4de4f422b5edb49b606055525c5dc29c3824446f401f6ece241d7ae6302d1fca
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: pacman-web
  labels:
    app.kubernetes.io/name: pacman
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: pacman
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 8080
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: pacman-score
  labels:
    app.kubernetes.io/name: pacman
    app.kubernetes.io/component: score
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: pacman
    app.kubernetes.io/component: score
  ports:
    - name: http
      port: 8080
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: pacman-user
  labels:
    app.kubernetes.io/name: pacman
    app.kubernetes.io/component: user
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: pacman
    app.kubernetes.io/component: user
  ports:
    - name: http
      port: 8080
      targetPort: http
